--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,10 @@ dependencies:
   video_player: ^2.6.1
   provider: ^6.0.1
   wakelock: ^0.6.0
-  universal_html: ^2.2.2
+  universal_html:
+  #  path: '../universal_html'
+    git:
+      url: https://github.com/ExecutionLab/universal_html
   dio: ^5.1.1
   path_provider: ^2.0.14
 
